// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropdown items a 1`] = `
<div>
  <li
    role="none"
  >
    <a
      class=""
    >
      Something
    </a>
  </li>
</div>
`;

exports[`dropdown items aria-disabled a 1`] = `
<div>
  <li
    role="none"
  >
    <a
      aria-disabled="true"
      class="pf-m-aria-disabled"
    >
      Something
    </a>
  </li>
</div>
`;

exports[`dropdown items aria-disabled button 1`] = `
<div>
  <li
    role="none"
  >
    <button
      aria-disabled="true"
      class="pf-m-aria-disabled"
      type="button"
    >
      Something
    </button>
  </li>
</div>
`;

exports[`dropdown items button 1`] = `
<div>
  <li
    role="none"
  >
    <button
      class=""
      type="button"
    >
      Something
    </button>
  </li>
</div>
`;

exports[`dropdown items description a 1`] = `
<div>
  <li
    role="none"
  >
    <a
      class="pf-m-description"
    >
      <div
        class="pf-c-dropdown__menu-item-main"
      >
        Something
      </div>
      <div
        class="pf-c-dropdown__menu-item-description"
      >
        Something's link description
      </div>
    </a>
  </li>
</div>
`;

exports[`dropdown items description button 1`] = `
<div>
  <li
    role="none"
  >
    <button
      class="pf-m-description"
      type="button"
    >
      <div
        class="pf-c-dropdown__menu-item-main"
      >
        Something
      </div>
      <div
        class="pf-c-dropdown__menu-item-description"
      >
        Something's button description
      </div>
    </button>
  </li>
</div>
`;

exports[`dropdown items disabled a 1`] = `
<div>
  <li
    role="none"
  >
    <a
      aria-disabled="true"
      class=""
    >
      Something
    </a>
  </li>
</div>
`;

exports[`dropdown items disabled button 1`] = `
<div>
  <li
    role="none"
  >
    <button
      aria-disabled="true"
      class=""
      type="button"
    >
      Something
    </button>
  </li>
</div>
`;

exports[`dropdown items hover a 1`] = `
<div>
  <li
    role="none"
  >
    <a
      class=""
    >
      Something
    </a>
  </li>
</div>
`;

exports[`dropdown items hover button 1`] = `
<div>
  <li
    role="none"
  >
    <button
      class=""
      type="button"
    >
      Something
    </button>
  </li>
</div>
`;

exports[`dropdown items separator 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;
